[project]
name = "a2c-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-mgmt-storage>=23.0.1",
    "filelock>=3.19.1",
    "gym>=0.26.2",
    "matplotlib>=3.10.5",
    "neo4j>=5.28.2",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
    "torc>=0.1.1",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
