[project]
name = "a2c-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-mgmt-storage>=23.0.1",
    "filelock>=3.19.1",
    "gym>=0.26.2",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.5",
    "neo4j>=5.28.2",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "transformers>=4.56.0",
]
